<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <LinearLayout
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/separator"
            app:srcCompat="@drawable/line" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/settings_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header">

        <LinearLayout
            android:id="@+id/settings_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/theme_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/use_dark_mode"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:thumbTint="@color/white"
                android:thumbTintMode="multiply"
                tools:checked="true" />

            <ImageView
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:contentDescription="@string/spacer"
                app:srcCompat="@drawable/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lang"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/language"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/lang_selection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/lang_en"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:buttonTint="@color/white"
                        android:layoutDirection="rtl"
                        android:text="@string/english"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/lang_ru"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:buttonTint="@color/white"
                        android:checked="true"
                        android:layoutDirection="rtl"
                        android:text="@string/russian"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/lang_by"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/white"
                        android:gravity="start"
                        android:layoutDirection="rtl"
                        android:text="@string/belorussian"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                </RadioGroup>
            </LinearLayout>

            <ImageView
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:contentDescription="@string/spacer"
                app:srcCompat="@drawable/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/vibe"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/vibration"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/vibe_selection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/vibe_max"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:buttonTint="@color/white"
                        android:checked="false"
                        android:layoutDirection="rtl"
                        android:text="@string/maximum"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/vibe_high"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:buttonTint="@color/white"
                        android:layoutDirection="rtl"
                        android:text="@string/high"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/vibe_normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:buttonTint="@color/white"
                        android:checked="true"
                        android:layoutDirection="rtl"
                        android:text="@string/normal"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/vibe_low"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:buttonTint="@color/white"
                        android:layoutDirection="rtl"
                        android:text="@string/low"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/vibe_none"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:buttonTint="@color/white"
                        android:layoutDirection="rtl"
                        android:text="@string/none"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                </RadioGroup>
            </LinearLayout>

            <ImageView
                android:id="@+id/separator4"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:contentDescription="@string/spacer"
                app:srcCompat="@drawable/line" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>