...
    <string name="app_name">Spectator</string>
    <string name="general_comments">Write anything</string>
    <string name="title_activity_graphs">Graphs</string>
    <string name="title_activity_details">Details</string>
    <string name="spectator">Spectator</string>
    <string name="start_counting">Start Counting</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="hourly_amount" translatable="false">0</string>
    <string name="last_hour">Last hour</string>
    <string name="total_amount" translatable="false">0</string>
    <string name="grand_total">Grand total</string>
    <string name="date">Today is August 4</string>
...
